# locallibrary-django

./: .gitignore  pyproject.toml
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_language.py  0003_book_language.py
catalog/static/css/: styles.css
catalog/templates/: base_generic.html  index.html
catalog/templates/catalog/: book_detail.html
locallibrary/: settings.py  urls.py
